--- a/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.html
+++ b/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.html
@@ -4,6 +4,7 @@
       <ion-icon name="ios-arrow-back"></ion-icon>
     </ion-button>
     <ion-title>Efeitos da pratica</ion-title>      
+    <ion-title id="subtitle">Após o jogo, me senti</ion-title>      
   </ion-toolbar>
 </ion-header> 
 
