--- a/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.scss
+++ b/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.scss
@@ -17,6 +17,12 @@ ion-title{
     margin: auto;
 }
 
+#subtitle{
+    font-size: 70%;
+    font-style: oblique;
+    text-transform: none;
+}
+
 ion-toolbar ion-button{
     position: absolute;
     margin-top: -2%;
