--- a/src/app/pages/criar-conta/criar-conta.page.html
+++ b/src/app/pages/criar-conta/criar-conta.page.html
@@ -10,10 +10,10 @@
 <ion-content padding color="tertiary">
   
   
-  <ion-avatar >
+  <!-- <ion-avatar >
     <img id="icon" src="./assets/img/Elemento-01.png" alt="">
     <ion-label id="foto">INSERIR<br>FOTO</ion-label>
-  </ion-avatar>
+  </ion-avatar> -->
   
   <form [formGroup]="registroForm"> 
     <ion-item>
