--- a/src/app/pages/relatorio/relatorio.page.html
+++ b/src/app/pages/relatorio/relatorio.page.html
@@ -34,7 +34,7 @@
   </div> 
   
   <div id="tipoRelatorio" >
-    <ion-button id="botao_pontos" shape="round" (click)="alteraFormatoRelatorio('pontos')" color="primary">
+    <ion-button id="botao_pontos" shape="round" (click)="alteraFormatoRelatorio('pontos')" >
       <ion-label>Descrição <BR>dos pontos</ion-label>
     </ion-button>
     <ion-button id="botao_estatisticas" shape="round" (click)="alteraFormatoRelatorio('estatisticas')">
