--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,31 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu menuId='menu' color="tertiary">
+    <ion-menu  menuId='menu' color="tertiary">
       <ion-header color="tertiary">
-        <ion-toolbar color="tertiary">
-          <ion-title>Perfil</ion-title>
+        <ion-toolbar color="primary">
+          <ion-title>Opções</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content color="tertiary">
-        <ion-list>
+        <ion-list id="lista">
             <ion-item (click)="editaPerfil()" color="tertiary" lines="none" class="nopadding">
               <ion-label>
                 Editar Perfil
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="alterarSenha()" color="tertiary" lines="none" class="nopadding">
+              <ion-label>
+                Alterar senha
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="sobre()" color="tertiary" lines="none" class="nopadding">
+              <ion-label>
+                Sobre nós
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="sair()" color="tertiary" lines="none" id="sair">
+              <ion-label>
+                Sair
               </ion-label>
             </ion-item>
           </ion-list>
