--- a/src/app/pages/auto-avaliacao/auto-avaliacao.page.html
+++ b/src/app/pages/auto-avaliacao/auto-avaliacao.page.html
@@ -4,6 +4,7 @@
       <ion-icon name="ios-arrow-back"></ion-icon>
     </ion-button>
     <ion-title>Auto-avaliacao</ion-title>
+    <ion-title id="subtitle">Durante o jogo, me senti</ion-title>
   </ion-toolbar>
 </ion-header> 
 
