--- a/src/app/pages/auto-avaliacao/auto-avaliacao.page.scss
+++ b/src/app/pages/auto-avaliacao/auto-avaliacao.page.scss
@@ -15,7 +15,11 @@ ion-title{
     width: 80%;
     margin: auto;
 }
-
+#subtitle{
+    font-size: 70%;
+    font-style: oblique;
+    text-transform: none;
+}
 ion-toolbar ion-button{
     position: absolute;
     margin-top: -2%;
