--- a/src/app/pages/registra-lutadores/registra-lutadores.page.scss
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.scss
@@ -98,26 +98,28 @@ ion-item ion-label{
 
 #raking_oponente_poule>ion-button{
 
-    margin-top: 2%;
-    margin-right: 3%; 
+    // margin-top: 2%;
+    // margin-right: 3%; 
 }
 
 #raking_oponente_poule{    
     position: absolute;
     bottom: 10%;
-    margin-left: 10%;
+    width: 100%;
+    height: 12%;
 
 }
 
 #class_oponente_eliminatoria>ion-button{
-    margin-top: 4%;
-    margin-right: 3%; 
+    margin-top: 3%;
+    // margin-right: 3%; 
 }
 
 #class_oponente_eliminatoria{
     position: absolute;
-    bottom: 10%;
+    bottom: 13%;
     margin-left: 3%; 
+    height: 19%;
 }
 
 #botao_confirmar{
